# gpucap

./: Cargo.toml  README.md  build.rs
docs/: index.html
man/: bgpucap.1
scripts/: release.sh
src/: cf_utils.rs  color.rs  compare.rs  embed.rs  exercise.metal  format.rs  gpu_proc.rs  gpuexercise.rs  iokit.rs  ioreport.rs  json.rs  lib.rs  main.rs  metrics.rs  metrics_filter.rs  output.rs  platform.rs  pmgr.rs  runner.rs  watch.rs
tests/: compare.rs  format.rs  gpuexercise.rs
tests/fixtures/: after_basic.json  before.json  before_power.json
